--- a/Recorder/app/src/main/res/layout/activity_main.xml
+++ b/Recorder/app/src/main/res/layout/activity_main.xml
@@ -5,51 +5,96 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@drawable/pk">
+    >
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/appbarlayout"
+        >
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimaryDark">
+
+        </android.support.v7.widget.Toolbar>
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabbar"
+            android:layout_below="@+id/appbarlayout"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            app:tabIndicator="@android:color/white"
+            android:background="@color/colorPrimaryDark"
+            app:tabTextColor="@android:color/white"></android.support.design.widget.TabLayout>
+
+    </android.support.design.widget.AppBarLayout>
 
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </android.support.v4.view.ViewPager>
-
-    <Button
-        android:id="@+id/rec"
-        android:layout_width="103dp"
-        android:layout_height="110dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="86dp"
-        android:background="@drawable/mic" />
-
-    <Button
-        android:id="@+id/pause"
-        android:layout_width="wrap_content"
-        android:layout_height="66dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="239dp"
-        android:background="@drawable/pause" />
-
-    <Button
-        android:id="@+id/play"
-        android:layout_width="wrap_content"
-        android:layout_height="63dp"
+        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="182dp"
-        android:layout_marginStart="30dp"
-        android:background="@drawable/ic_play_arrow_black_24dp" />
+        android:layout_below="@+id/appbarlayout" />
 
-    <Button
-        android:id="@+id/stop"
-        android:layout_width="wrap_content"
-        android:layout_height="69dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/play"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/stop" />
+
+
+
+
+
+
+
+
+
+
+
+    <!--<android.support.v4.view.ViewPager-->
+        <!--android:id="@+id/viewpager"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
+
+    <!--</android.support.v4.view.ViewPager>-->
+
+    <!--<Button-->
+        <!--android:id="@+id/rec"-->
+        <!--android:layout_width="103dp"-->
+        <!--android:layout_height="110dp"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_marginTop="86dp"-->
+        <!--android:background="@drawable/mic" />-->
+
+    <!--<Button-->
+        <!--android:id="@+id/pause"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="66dp"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_marginTop="239dp"-->
+        <!--android:background="@drawable/pause" />-->
+
+    <!--<Button-->
+        <!--android:id="@+id/play"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="63dp"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_marginBottom="182dp"-->
+        <!--android:layout_marginStart="30dp"-->
+        <!--android:background="@drawable/ic_play_arrow_black_24dp" />-->
+
+    <!--<Button-->
+        <!--android:id="@+id/stop"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="69dp"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--android:layout_alignTop="@+id/play"-->
+        <!--android:layout_marginEnd="20dp"-->
+        <!--android:background="@drawable/stop" />-->
 
 </RelativeLayout>
