--- a/Recorder/app/src/main/res/values/styles.xml
+++ b/Recorder/app/src/main/res/values/styles.xml
@@ -7,5 +7,10 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="progress"
+        parent="">
+        <item name="colorAccent">@color/green</item>
+
+    </style>
 
 </resources>
